# SETL

./: AUTHORS  BUGS  ChangeLog  GNUmakefile  INSTALL  Makefile  NEWS  README  README.md  ask-yes  configure  cpp-2.7.2.1.tgz  doc-dist  freeglut-2.0.1.tgz  gears.tgz  gmp-6.1.2.tgz  main.mk  mkbuild  path-from  setup-parms  stamp-auto
doc/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  include.texi  index.html  setl-ext.html  setl-ext.info  setl-ext.texi  setl-imp.html  setl-imp.info  setl-imp.texi  setl-lang.html  setl-lang.info  setl-lang.texi  setl-lib.html  setl-lib.info  setl-lib.texi  setl-maint.html  setl-maint.info  setl-maint.texi  setl-tut.html  setl-tut.info  setl-tut.texi  setl-user.html  setl-user.info  setl-user.texi  setl.1  setl.html  setl.info  setl.texi  setlcpp.1  setltran.1  stamp-3  stamp-6  texinfo.tex  (+5 more)
doc-legacy/: lib.html
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  common.h  config.h.in  configure  configure.ac  grammar  header  lexicon  opcodes  pax-avail  run-setl  sysrots
src/cpp/: Makefile.am  Makefile.in  README  config.h  cppalloc.c  cpperror.c  cppexp.c  cpphash.c  cpphash.h  cpplib.c  cpplib.h  cppmain.c  obstack.c  obstack.h  version.c
src/m4/: my.m4
src/opt/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
src/opt/mesa/: Makefile.am  Makefile.in  README  auxi.c  auxi.h  auxi.setl  defines.awk  extern.setl  for-s  gears.setl  gen.setl  glut-patch  glutSETL-gen.setl  glutaconst-gen.setl  glutafunc-gen.setl  magic.setl  massage  megahack.setl  one-line.setl  sniff-params.setl  t.setl  tokens.setl  ttt.setl  tuplize.setl  typedef.setl  whatami
src/opt/w/: Makefile.am  Makefile.in  w-custom.c  w-custom.dispatch  w-custom.h  w-custom.lexicon  w-custom.setl  w-custom.sysrots  whatami
src/run/: Makefile.am  Makefile.in  arena.c  arena.h  assemble.c  callskel.c  errage.c  execute.c  fd_bitset.c  fd_bitset.h  go.c  heap.c  init.c  lib.c  main.c  nopnds.awk  opndpfxs.awk  opndtypes.awk  oprotsigs.awk  os.c  patricia.c  patricia.h  patrie.c  patrie.h  patty.c  rex.c  run.c  setlrun.h  spewcode.c  sys.c  sysdatdef.awk  sysdatinit.awk  sysrotdef.awk  sysrotinit.awk  sysrotsigs.awk  util.c
src/run/freeglut-setl/: Makefile.am  Makefile.in  README.SETL  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs
src/run/freeglut-setl/doc/: Makefile.am  Makefile.in
src/run/freeglut-setl/progs/: Makefile.am  Makefile.in
src/run/freeglut-setl/progs/demos/: Makefile.am  Makefile.in
src/run/freeglut-setl/progs/demos/Fractals/: Makefile.am  Makefile.in
src/run/freeglut-setl/progs/demos/Fractals_random/: Makefile.am  Makefile.in  fractals_random.c
src/run/freeglut-setl/progs/demos/Gears/: Makefile.am  Makefile.in  gears.c
src/run/freeglut-setl/progs/demos/Lorenz/: Makefile.am  Makefile.in
src/run/freeglut-setl/progs/demos/One/: Makefile.am  Makefile.in  one.c
src/run/freeglut-setl/src/: Makefile.am  Makefile.in  freeglut_gamemode.c  freeglut_init.c  freeglut_internal.h  freeglut_menu.c  freeglut_structure.c
src/run/w/: Makefile.am  Makefile.in  W.h  XW.c
src/tests/: Makefile.am  Makefile.in  README  any.out  any.setl  assign.out  assign.setl  b.setl  basename.setl  calls.out  calls.setl  comb.setl  compound.setl  compound.sh  connie.out  connie.setl  count.setl  diff-read  diff-read.setl  dike.out  dike.setl  div.out  div.setl  dumdum.out  dumdum.setl  eof.data  eof.out  eof.setl  euler.out  euler.setl  fd-pass-main.setl  fd-pass-pump.setl  fd-pass.out  fd-pass.setl  filter.out  filter.setl  from.setl  geniters.out  geniters.setl  get.out  (+145 more)
src/tran/: Makefile.am  Makefile.in  analyze.c  canonize.c  debug.c  flatten.c  gencode.c  identify.c  include.awk  main.c  mawk.awk  mem.c  nodes.awk  optimize.c  parse.c  patricia.c  patricia.h  patrie.c  patrie.h  patty.c  scopes.c  setltran.h  spewobj.c  symstack.h  symtab.c  sysrot.c  sysrots.awk  tinit.awk  tokenize.c  toksym.c  tran.c  util.c  yytokens.awk
